<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background"

    >

    <!-- Title -->
    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textColor="@color/primary"
        android:textStyle="bold"

        android:gravity="center"
        android:layout_gravity="center_horizontal" />

    <!-- Image -->
    <ImageView
        android:id="@+id/coin_logo"

        android:layout_marginTop="40dp"

        android:layout_width="190dp"
        android:layout_height="130dp"

        android:layout_gravity="center"

        android:src="@drawable/coin_img" />

    <EditText android:id="@+id/input_AlcoholPrice"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:hint="@string/alcohol_price"
        android:textSize="14sp"
        android:textColor="@color/primary"
        android:textColorHint="@color/background"
        android:textStyle="bold"
        android:textAlignment="center"

        android:layout_gravity="center"

        android:background="@drawable/btn_input" />

    <EditText android:id="@+id/input_GasPrice"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:hint="@string/gas_price"
        android:textSize="14sp"
        android:textColor="@color/primary"
        android:textColorHint="@color/background"
        android:textStyle="bold"
        android:textAlignment="center"

        android:layout_gravity="center"

        android:background="@drawable/btn_input" />

    <Button android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:text="@string/next_complete"
        android:textSize="14sp"
        android:textColor="@color/background"
        android:textStyle="bold"
        android:textAlignment="center"

        android:drawableEnd="@drawable/next_icon"

        android:layout_gravity="center"

        android:backgroundTint="@color/primary" />


</LinearLayout>