<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsumePageActivity"
    android:background="@color/background"

    android:orientation="vertical"
    >
    <!-- TitleRow -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:gravity="center"
        android:layout_gravity="center_horizontal" >

        <TextView android:id="@+id/title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"

            android:text="@string/app_name"
            android:textSize="48sp"
            android:textColor="@color/primary"
            android:textStyle="bold"

            android:gravity="center"
            />
    </TableRow>

    <!-- ImageRow -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:gravity="center"
        android:layout_gravity="center_horizontal"

        android:layout_marginTop="40dp" >

        <ImageView
            android:id="@+id/coin_logo"

            android:layout_height="130dp"
            android:layout_width="190dp"


            android:layout_gravity="center"

            android:src="@drawable/buy_img" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:gravity="center"
        android:layout_gravity="center_horizontal" >

        <EditText android:id="@+id/input_AlcoholValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:hint="@string/alcohol_value"
            android:textSize="14sp"
            android:textColor="@color/primary"
            android:textColorHint="@color/background"
            android:textStyle="bold"
            android:textAlignment="center"

            android:background="@drawable/btn_input" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:gravity="center"
        android:layout_gravity="center_horizontal" >

        <EditText android:id="@+id/input_GasValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:hint="@string/gas_value"
            android:textSize="14sp"
            android:textColor="@color/primary"
            android:textColorHint="@color/background"
            android:textStyle="bold"
            android:textAlignment="center"

            android:background="@drawable/btn_input" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:gravity="center"
        android:layout_gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"

            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"

            android:backgroundTint="@color/primary"

            android:drawableLeft="@drawable/back_icon"

            android:text="@string/back_short"
            android:textColor="@color/background"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"

            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"

            android:backgroundTint="@color/primary"

            android:drawableEnd="@drawable/next_icon"

            android:text="@string/next_short"
            android:textAlignment="center"
            android:textColor="@color/background"
            android:textSize="14sp"
            android:textStyle="bold" />

    </TableRow>

</TableLayout>